[gd_scene format=3 uid="uid://pru0t1x7aufj"]

[ext_resource type="Texture2D" uid="uid://cnedufk3xjqmb" path="res://Assets/Dialogue/BookMenu.png" id="1_lj4oq"]
[ext_resource type="Script" uid="uid://noypn53jq8cb" path="res://Scripts/pauseMenu.gd" id="1_qwhev"]
[ext_resource type="StyleBox" uid="uid://cfg4t3f3c1ai5" path="res://Assets/buttonFocusedStyleBox.tres" id="3_5w4ur"]
[ext_resource type="Texture2D" uid="uid://bjprrxitu58bg" path="res://Assets/InScene Items/_Menu - FlipArrow2.png" id="4_ey1tb"]

[node name="PauseMenu" type="CanvasLayer" unique_id=1395104076]
process_mode = 3
script = ExtResource("1_qwhev")

[node name="Background Fade" type="ColorRect" parent="." unique_id=1202986295]
offset_left = -41.0
offset_top = -17.0
offset_right = 1951.0
offset_bottom = 1105.0
color = Color(0, 0, 0, 0.4)

[node name="BookBase" type="TextureRect" parent="." unique_id=982632053]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_lj4oq")

[node name="LeftPage" type="ColorRect" parent="." unique_id=1610651927]
offset_left = 277.0
offset_top = 97.0
offset_right = 932.0
offset_bottom = 911.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.43137255, 1, 1, 0)

[node name="MarginContainer" type="MarginContainer" parent="LeftPage" unique_id=1461017470]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="LeftPage/MarginContainer" unique_id=1992265427]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LeftPage/MarginContainer/HBoxContainer" unique_id=1166067634]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=957789080]
layout_mode = 2

[node name="Label" type="Label" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer/CenterContainer" unique_id=1588700566]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Pause"

[node name="UnpauseButton" type="Button" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1469361328]
layout_mode = 2
theme_override_styles/focus = ExtResource("3_5w4ur")
text = "Unpause"

[node name="SaveButton" type="Button" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=313653153]
layout_mode = 2
theme_override_styles/focus = ExtResource("3_5w4ur")
disabled = true
text = "Save"

[node name="OptionsButton" type="Button" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=871554500]
visible = false
layout_mode = 2
theme_override_styles/focus = ExtResource("3_5w4ur")
disabled = true
text = "Options"

[node name="MainMenuButton" type="Button" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=708801128]
layout_mode = 2
theme_override_styles/focus = ExtResource("3_5w4ur")
text = " Main Menu"

[node name="QuitButton" type="Button" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1751141820]
layout_mode = 2
theme_override_styles/focus = ExtResource("3_5w4ur")
disabled = true
text = "Quit"

[node name="RightPage" type="ColorRect" parent="." unique_id=995532869]
offset_left = 1002.0
offset_top = 97.0
offset_right = 1657.0
offset_bottom = 911.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.43137255, 1, 1, 0)

[node name="MarginContainer" type="MarginContainer" parent="RightPage" unique_id=189779841]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="RightPage/MarginContainer" unique_id=1077636643]
layout_mode = 2

[node name="RightVBox" type="VBoxContainer" parent="RightPage/MarginContainer/HBoxContainer" unique_id=1625117086]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Title" type="CenterContainer" parent="RightPage/MarginContainer/HBoxContainer/RightVBox" unique_id=2093571216]
layout_mode = 2

[node name="Label" type="Label" parent="RightPage/MarginContainer/HBoxContainer/RightVBox/Title" unique_id=1932601203]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "The 
Witch's Orders"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FeedYourself" type="HBoxContainer" parent="RightPage/MarginContainer/HBoxContainer/RightVBox" unique_id=1394541804]
layout_mode = 2
alignment = 1

[node name="CheckBox" type="CheckBox" parent="RightPage/MarginContainer/HBoxContainer/RightVBox/FeedYourself" unique_id=319836600]
layout_mode = 2
disabled = true

[node name="Label" type="Label" parent="RightPage/MarginContainer/HBoxContainer/RightVBox/FeedYourself" unique_id=384895655]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Feed yourself"

[node name="FeedIgnus" type="HBoxContainer" parent="RightPage/MarginContainer/HBoxContainer/RightVBox" unique_id=1784235989]
layout_mode = 2
alignment = 1

[node name="CheckBox" type="CheckBox" parent="RightPage/MarginContainer/HBoxContainer/RightVBox/FeedIgnus" unique_id=606887730]
layout_mode = 2
disabled = true

[node name="Label" type="Label" parent="RightPage/MarginContainer/HBoxContainer/RightVBox/FeedIgnus" unique_id=1716641905]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Feed Ignus"

[node name="TendToPit" type="HBoxContainer" parent="RightPage/MarginContainer/HBoxContainer/RightVBox" unique_id=1913704699]
layout_mode = 2
alignment = 1

[node name="CheckBox" type="CheckBox" parent="RightPage/MarginContainer/HBoxContainer/RightVBox/TendToPit" unique_id=225647869]
layout_mode = 2
disabled = true

[node name="Label" type="Label" parent="RightPage/MarginContainer/HBoxContainer/RightVBox/TendToPit" unique_id=1928560117]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Tend to the pit"

[node name="OrganisePotions" type="HBoxContainer" parent="RightPage/MarginContainer/HBoxContainer/RightVBox" unique_id=253482884]
layout_mode = 2
alignment = 1

[node name="CheckBox" type="CheckBox" parent="RightPage/MarginContainer/HBoxContainer/RightVBox/OrganisePotions" unique_id=1842446730]
layout_mode = 2
disabled = true

[node name="Label" type="Label" parent="RightPage/MarginContainer/HBoxContainer/RightVBox/OrganisePotions" unique_id=946187965]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Organise Potions"

[node name="CompleteCauldron" type="HBoxContainer" parent="RightPage/MarginContainer/HBoxContainer/RightVBox" unique_id=254908649]
layout_mode = 2
alignment = 1

[node name="CheckBox" type="CheckBox" parent="RightPage/MarginContainer/HBoxContainer/RightVBox/CompleteCauldron" unique_id=2144048616]
layout_mode = 2
disabled = true

[node name="Label" type="Label" parent="RightPage/MarginContainer/HBoxContainer/RightVBox/CompleteCauldron" unique_id=912739438]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Complete the Cauldron"

[node name="Forward Button" type="Button" parent="." unique_id=1466322586]
visible = false
offset_left = 1456.0
offset_top = 706.0
offset_right = 1664.0
offset_bottom = 914.0
theme_override_colors/icon_pressed_color = Color(0.23137255, 0.23137255, 0.23137255, 1)
icon = ExtResource("4_ey1tb")
flat = true

[node name="Label" type="Label" parent="Forward Button" unique_id=749018019]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Plant Guide"

[connection signal="pressed" from="LeftPage/MarginContainer/HBoxContainer/VBoxContainer/UnpauseButton" to="." method="_on_unpause_button_pressed"]
[connection signal="pressed" from="LeftPage/MarginContainer/HBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="LeftPage/MarginContainer/HBoxContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="LeftPage/MarginContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Forward Button" to="." method="_on_forward_button_pressed"]
